wp-content/themes/vincentragosta/blocks/shutter-card/style.scss
.shutter-card {
  position: relative;
  display: flex;
  flex-direction: column;
  background-color: var(--wp--preset--color--base);
  border: 1px solid var(--wp--preset--color--grey-2);
  color: var(--wp--preset--color--contrast);
  padding: var(--wp--preset--spacing--50);
  overflow: hidden;
  transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);

  // Active state styles
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: 40%;

  // Inactive (collapsed) state.
  &.shutter-card--inactive {
    cursor: pointer;
    flex-grow: 0;
    flex-shrink: 0;
    // Use the width calculated by PHP, with a 20% fallback.
    flex-basis: var(--card-inactive-width, 20%);
    background-color: var(--wp--preset--color--grey-1);
    color: var(--wp--preset--color--base);

    .shutter-card__subtitle,
    .shutter-card__description {
      opacity: 0;
      visibility: hidden;
      transition: opacity 0.2s ease-out, visibility 0s 0.2s;
    }
  }

  &__id {
    font-size: 1rem;
    font-weight: 300;
    color: var(--wp--preset--color--grey-3);
    margin-bottom: 0.5rem;
  }

  &__title {
    color: inherit;
    font-size: 2rem;
    font-family: var(--wp--preset--font-family--reckless-neue);
    font-weight: 300;
    line-height: 1.2;
    margin: 0 0 1rem;
    // Title will now wrap if needed.
  }

  &__subtitle {
    font-size: var(--wp--preset--font-size--body-tiny);
    font-weight: 500;
    text-transform: uppercase;
    margin: 0 0 1rem;
    transition: opacity 0.4s ease-in 0.4s;
  }

  &__description {
    font-size: var(--wp--preset--font-size--body-small);
    line-height: 1.5rem;
    opacity: 1;
    visibility: visible;
    //transition: opacity 0.4s ease-in;
    transition: opacity 0.4s ease-in 0.6s;

    p {
      margin-top: 0;

      &:last-child {
        margin-bottom: 0;
      }
    }
  }

  &__close-icon {
    position: absolute;
    bottom: var(--wp--preset--spacing--50);
    left: var(--wp--preset--spacing--50);
    width: 36px;
    height: 36px;
    border-radius: 50%;
    border: 2px solid var(--wp--preset--color--contrast);
    color: var(--wp--preset--color--base);
    background-color: var(--wp--preset--color--contrast);
    transition: transform 0.3s ease-in-out, color 0.3s ease-in, background-color 0.3s ease-in;

    .icon {
      width: 100%;
      height: 100%;
      fill: currentColor;
    }

    .shutter-card--inactive & {
      color: var(--wp--preset--color--base);
      border-color: var(--wp--preset--color--base);
      transform: rotate(45deg);
    }

    .shutter-card--inactive:hover & {
      transform: rotate(0);
      color: var(--wp--preset--color--contrast);
      background-color: var(--wp--preset--color--accent-1);
      border-color: var(--wp--preset--accent-1);
    }
  }
}

